--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
+.gitignore
+.git/
 
 # Godot-specific ignores
 .import/
 export.cfg
 export_presets.cfg
+*.import
+android/
 
 # Mono-specific ignores
 .mono/
 data_*/
+
+img/
 
 # VScode ignores
 .vscode
